--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">Seu navagedor não é compatível com isso</iframe>
 
             
         </section>
         <section id="rede-sociais">
+            <a href="#"></a>
 
         </section>
     </main>
